# Crazy_Cook

./: .gitignore  CMakeLists.txt  Informe.txt  MiProyecto.zpr  Notas.txt  PuntajeG.txt  RecetasG.txt  main.cpp
includes/: Agarrable.h  Button.h  Chef.h  Cliente.h  Definiciones.h  Espacio.h  Heladera.h  Hornalla.h  Ingrediente.h  ListaIngredientes.h  ManejadorClientes.h  ManejadorPuntajes.h  ManejadorRecetas.h  Mapa.h  Mesada.h  Mostrador.h  Plato.h  Puntaje.h  Rejilla.h  Suelo.h  Tacho.h
src/: Agarrable.cpp  Button.cpp  Chef.cpp  Cliente.cpp  Espacio.cpp  Heladera.cpp  Hornalla.cpp  Ingrediente.cpp  ListaIngredientes.cpp  ManejadorClientes.cpp  ManejadorPuntajes.cpp  ManejadorRecetas.cpp  Mapa.cpp  Mesada.cpp  Mostrador.cpp  Plato.cpp  Puntaje.cpp  Rejilla.cpp  Suelo.cpp  Tacho.cpp
